src/objects/Trigger_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ABCContactTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ABCContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AccountTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CaseTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloneAccountTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CloneAccountTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloneLeadTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CloneLeadTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloneOpportunityTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CloneOpportunityTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateContactCheckTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DuplicateContactCheckTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFTAddressVerificationTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EFTAddressVerificationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesHeaderTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SalesHeaderTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Setting</label>
</CustomObject>